RESOLVED FIXED163763
AX: VoiceOver is not detecting ARIA treeview if it contains role="presentation"
https://bugs.webkit.org/show_bug.cgi?id=163763
Summary AX: VoiceOver is not detecting ARIA treeview if it contains role="presentation"
Nan Wang
Reported 2016-10-20 15:38:57 PDT
VoiceOver does not recognise a tree if there are elements with role=“presentation” in the structure. <rdar://problem/28280231>
Attachments
patch (7.17 KB, patch)
2016-10-20 15:48 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-10-20 15:48:38 PDT
chris fleizach
Comment 2 2016-10-20 15:55:55 PDT
Comment on attachment 292273 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=292273&action=review > Source/WebCore/accessibility/AccessibilityTree.cpp:100 > + if (!nodeHasTreeItemChild(*child)) does this only work one level deep then?
Nan Wang
Comment 3 2016-10-20 16:02:45 PDT
Comment on attachment 292273 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=292273&action=review >> Source/WebCore/accessibility/AccessibilityTree.cpp:100 >> + if (!nodeHasTreeItemChild(*child)) > > does this only work one level deep then? Yes. I think normally web author will just have this one level. Do you think we should cover multiple level case?
WebKit Commit Bot
Comment 4 2016-10-20 18:18:06 PDT
Comment on attachment 292273 [details] patch Clearing flags on attachment: 292273 Committed r207647: <http://trac.webkit.org/changeset/207647>
WebKit Commit Bot
Comment 5 2016-10-20 18:18:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.