Source/WebCore/accessibility/AccessibilityTree.h
@@ -44,6 +44,7 @@ private:
     bool computeAccessibilityIsIgnored() const override;
     AccessibilityRole determineAccessibilityRole() override;
     bool isTreeValid() const;
+    bool nodeHasTreeItemChild(Node&) const;
 };
     
 } // namespace WebCore
